Fix text-shadow style bleeding through to .btn

--- a/componentlib/components/02-modules/button/_sass.scss
+++ b/componentlib/components/02-modules/button/_sass.scss
@@ -8,6 +8,7 @@ button,
   cursor: pointer;
   font-family: $font-stack-sans;
   text-decoration: none;
+  text-shadow: none;
   color: #fff;
   color: rgba(255,255,255,.95);
   background: $color-btn;
